# TForth

./: .gitignore  README.md  TForth.cabal  TypedForth.cabal  cabal.sandbox.config  stack.yaml
data/: evaluation1.fs  evaluation2.fs  evaluation3.fs  example.fs  example2.fs  example3.fs  example4.fs
src/TF/: CallChecker.hs  Checker.hs  CheckerUtils.hs  Errors.hs  Evaluator.hs  ForthTypes.hs  HandleDegrees.hs  Paths.hs  Printer.hs  StackCalculus.hs  StackEffectParser.hs  SubtypeUtil.hs  Subtypes.hs  TH.hs  Types.hs  Util.hs  WildcardRules.hs  Words.hs  WordsBuilder.hs
src/TF/CommandLine/: Main.hs
src/TF/HasEffects/: ControlStructures.hs  Expressions.hs  ForthWord.hs  HasStackEffects.hs  OOP.hs
src/TF/Parsers/: ControlStructures.hs  Create.hs  Misc.hs  OOP.hs  Parser.hs  ParserUtils.hs  Tokenizer.hs
src/TF/Type/: Nodes.hs  StackEffect.hs
test/TF/: Main.hs
