name:                TForth
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Gregor Riegler
maintainer:          gregor.riegler@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable TFCommandline
  Main-Is:         TF/CommandLine/Main.hs
  build-depends: containers >= 0.5.5.1, safe,
                   base, mtl, parallel, criterion,
                   transformers, split, errors, lens, total,
                   bifunctors, vector, parsec, text, free, pretty, pretty-show, hint, extra, filepath, profunctors
  Build-Depends:        hspec-expectations-lens, hspec, QuickCheck >= 2.7.6, rosezipper, lens-simple, cmdargs, directory
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-suite spec
  Hs-Source-Dirs: src,test
  Main-is: TF/Main.hs
  Type:                 exitcode-stdio-1.0
  build-depends: containers >= 0.5.5.1, safe,
                   base, mtl, parallel, criterion,
                   transformers, split, errors, lens, total,
                   bifunctors, vector, parsec, text, free, pretty, pretty-show, hint, extra, filepath, profunctors, lens-simple, cmdargs

  Build-Depends:        hspec-expectations-lens, hspec, QuickCheck >= 2.7.6
  default-language:    Haskell2010
